--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap');
 *{
     margin: 0;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
+
+#cuerpo{
+    background-color: #00203e;;
+}
+
 /*Encabezado-------------------------------------------------------------------*/
 .cabeza{
-    background-color: #4f255a;
+    background-color: black;
     position: fixed; /*se mantiene en el mismo lugar no importa que*/
+    top: 0;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -23,8 +31,113 @@
 
 .transportador{
     text-decoration: none;
-    color: white;
-    font-size: 20px;
+    color: rgb(167, 167, 167);
+    font-size: 30px;
+    font-family: "Neonderthaw", cursive;
+    font-weight: bold;
+    transition: 0.2s;
 }
 
+.rojo:hover{
+    color: white;
+    text-shadow: 0px 0px 5px #ff003c,
+                0px 0px 10px #ff003c,
+                0px 0px 15px #ff003c,
+                0px 0px 20px #ff003c;
+}
+
+.naranjo:hover{
+    color: white;
+    text-shadow: 0px 0px 5px #ff6600,
+                0px 0px 10px #ff6600,
+                0px 0px 15px #ff6600,
+                0px 0px 20px #ff6600;
+}
+.amarillo:hover{
+    color: white;
+    text-shadow: 0px 0px 5px #00ff2f,
+                0px 0px 10px #00ff2f,
+                0px 0px 15px #00ff2f,
+                0px 0px 20px #00ff2f;
+}
+
+.azul:hover{
+    color: white;
+    text-shadow: 0px 0px 5px #0084ff,
+                0px 0px 10px #0084ff,
+                0px 0px 15px #0084ff,
+                0px 0px 20px #0084ff;
+}
+
+.orbit {
+    position: absolute;
+    border: 1px dashed rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.planet {
+    width: 20px;
+    height: 20px;
+    background-color: #33f;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.planet.mars { background-color: #e44; }
+.planet.earth { background-color: #3af; }
+.planet.jupiter { background-color: #f96; width: 30px; height: 30px; }
+
 /*Encabezado-------------------------------------------------------------------*/
+/*Cuerpo-------------------------------------------------------------------*/
+.inicio{
+    background-color: #003567;
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-evenly;
+    height: 400px;
+    align-items: center;
+    padding: 20px;
+}
+
+.foto{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.3s;
+}
+
+.foto:hover{
+    scale: 1.1;
+}
+
+.container-me{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container-text{
+    flex: 2;
+    color: white;
+    transition: 0.2s;
+}
+
+.container-text:hover{
+    text-shadow: 0px 0px 5px #0084ff,
+                0px 0px 10px #0084ff,
+                0px 0px 15px #0084ff,
+                0px 0px 20px #0084ff;
+}
+
+.logo {
+    width: 200px;
+    height: 200px;
+}
+/*Cuerpo-------------------------------------------------------------------*/
