--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,12 +71,13 @@
 
 .orbit {
     position: absolute;
-    border: 1px dashed rgba(255, 255, 255, 0.1);
+    border: 1px dashed rgb(226, 226, 226);
     border-radius: 50%;
     pointer-events: none;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
+    padding: 0px;
 }
 
 .planet {
@@ -84,15 +85,23 @@
     height: 20px;
     background-color: #33f;
     border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 0px;
+    position: relative;
+    transform: translate(10px);
 }
 
-.planet.mars { background-color: #e44; }
-.planet.earth { background-color: #3af; }
-.planet.jupiter { background-color: #f96; width: 30px; height: 30px; }
+.planet.mars { 
+    background-color: #e44; 
+}
+.planet.earth { 
+    background-color: #3af; 
+}
+.planet.jupiter { 
+    background-color: #f96; 
+    width: 30px; 
+    height: 30px; 
+    transform: translate(15px)
+}
 
 /*Encabezado-------------------------------------------------------------------*/
 /*Cuerpo-------------------------------------------------------------------*/
@@ -135,9 +144,46 @@
                 0px 0px 15px #0084ff,
                 0px 0px 20px #0084ff;
 }
+/*Proyectos*/
 
 .logo {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    border-radius: 25%;
+    box-shadow: 0px 0px 10px #ff003c;
+    transition: 0.3s;
+}
+.logo:hover{
+    scale: 1.1;
+    box-shadow: 0px 0px 10px #ff003c,
+                0px 0px 15px #ff003c,
+                0px 0px 20px #ff003c,
+                0px 0px 25px #ff003c;
+}
+#proyectos{
+    display: flex;
+    padding: 20px;
+    align-items: center;
+}
+.containerL {
+    flex: 1;
+    color: white;
+    transition: 0.3s;
+}
+
+.containerL:hover{
+    text-shadow: 0px 0px 10px #ff003c,
+                0px 0px 15px #ff003c,
+                0px 0px 20px #ff003c,
+                0px 0px 25px #ff003c;
+}
+
+.containerR {
+    flex: 1;
+    display: flex;
+    flex-wrap: ;
+    align-items: center;
 }
 /*Cuerpo-------------------------------------------------------------------*/
+
