--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,7 +106,7 @@
 /*Encabezado-------------------------------------------------------------------*/
 /*Cuerpo-------------------------------------------------------------------*/
 .inicio{
-    background-color: #003567;
+    background: radial-gradient(at bottom, #017fa5, #003342);
     margin-top: 80px;
     display: flex;
     justify-content: space-evenly;
@@ -147,8 +147,8 @@
 /*Proyectos*/
 
 .logo {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     margin: 20px;
     border-radius: 25%;
     box-shadow: 0px 0px 10px #ff003c;
@@ -165,6 +165,7 @@
     display: flex;
     padding: 20px;
     align-items: center;
+    background: radial-gradient(at top,#01556e, #000f1d);
 }
 .containerL {
     flex: 1;
@@ -182,8 +183,20 @@
 .containerR {
     flex: 1;
     display: flex;
-    flex-wrap: ;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
 }
+
+/*estilo de prueba*/
+.snow {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background: white;
+    border-radius: 50%;
+    filter: drop-shadow(0 0 10px rgb(255, 90, 90));
+}
+
 /*Cuerpo-------------------------------------------------------------------*/
 
