--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+    color: white;
 }
 
 #cuerpo{
@@ -91,16 +91,28 @@
 }
 
 .planet.mars { 
-    background-color: #e44; 
+    background-color: white; 
+    box-shadow: 0px 0px 5px #ff003c,
+                0px 0px 10px #ff003c,
+                0px 0px 15px #ff003c,
+                0px 0px 20px #ff003c;
 }
 .planet.earth { 
-    background-color: #3af; 
+    background-color: white; 
+    box-shadow: 0px 0px 5px #0084ff,
+                0px 0px 10px #0084ff,
+                0px 0px 15px #0084ff,
+                0px 0px 20px #0084ff;
 }
 .planet.jupiter { 
-    background-color: #f96; 
+    background-color: white; 
     width: 30px; 
     height: 30px; 
-    transform: translate(15px)
+    transform: translate(15px);
+    box-shadow: 0px 0px 5px #ff6600,
+                0px 0px 10px #ff6600,
+                0px 0px 15px #ff6600,
+                0px 0px 20px #ff6600;
 }
 
 /*Encabezado-------------------------------------------------------------------*/
@@ -155,7 +167,6 @@
     transition: 0.3s;
 }
 .logo:hover{
-    scale: 1.1;
     box-shadow: 0px 0px 10px #ff003c,
                 0px 0px 15px #ff003c,
                 0px 0px 20px #ff003c,
@@ -165,7 +176,7 @@
     display: flex;
     padding: 20px;
     align-items: center;
-    background: radial-gradient(at top,#01556e, #000f1d);
+    background: radial-gradient(at top,#014155, #000f1d);
 }
 .containerL {
     flex: 1;
@@ -198,5 +209,101 @@
     filter: drop-shadow(0 0 10px rgb(255, 90, 90));
 }
 
+/*Habilidades*/
+.titulo{
+    margin-bottom: 20px;
+    font-size: 40px;
+    color: white;
+    transition: 0.3s;
+}
+
+.titulo:hover{
+    text-shadow: 0px 0px 10px #ff6600,
+                0px 0px 15px #ff6600,
+                0px 0px 20px #ff6600,
+                0px 0px 25px #ff6600;
+}
+
+.containerh{
+    background-color: #000f1d;
+    text-align: center;
+    padding: 20px;
+}
+
+.cont {
+    display: flex;
+    justify-content: center;
+}
+
+.derecha, .izquierda {
+    flex: 1;
+    padding: 20px;
+}
+
+.barra {
+    display: flex;
+    align-items: center;
+}
+
+.progreso {
+    height: 10px;
+    border-radius: 10px 0 0 10px;
+}
+
+.html {
+    flex: 6;
+    background-color: white;
+    box-shadow: 0px 0px 10px #ff6600,
+                0px 0px 15px #ff6600,
+                0px 0px 20px #ff6600,
+                0px 0px 25px #ff6600;;
+}
+
+.css {
+    flex: 6;
+    height: 10px;
+    background-color: white;
+    box-shadow: 0px 0px 10px #0084ff,
+                0px 0px 15px #0084ff,
+                0px 0px 20px #0084ff,
+                0px 0px 25px #0084ff;;
+}
+
+.mysql {
+    flex: 6;
+    height: 10px;
+    background-color: white;
+    box-shadow: 0px 0px 10px #ff003c,
+                0px 0px 15px #ff003c,
+                0px 0px 20px #ff003c,
+                0px 0px 25px #ff003c;;
+}
+
+.js {
+    flex: 3;
+    height: 10px;
+    background-color: white;
+    box-shadow: 0px 0px 10px #00ff2f,
+                0px 0px 15px #00ff2f,
+                0px 0px 20px #00ff2f,
+                0px 0px 25px #00ff2f;;
+}
+
+.python {
+    flex: 1;
+    height: 10px;
+    background-color: white;
+    box-shadow: 0px 0px 10px #0084ff,
+                0px 0px 15px #0084ff,
+                0px 0px 20px #0084ff,
+                0px 0px 25px #0084ff;;
+}
+
+.faltante {
+    flex: 4;
+    height: 10px;
+    background-color: grey;
+    border-radius: 0 10px 10px 0;
+}
 /*Cuerpo-------------------------------------------------------------------*/
 
