--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
 
@@ -164,7 +164,7 @@
     margin: 20px;
     border-radius: 25%;
     box-shadow: 0px 0px 10px #ff003c;
-    transition: 0.3s;
+    position: relative;
 }
 .logo:hover{
     box-shadow: 0px 0px 10px #ff003c,
