--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@
 }
 
 #cuerpo{
-    background-color: #00203e;;
+    background-color: #00203e;
 }
 
 /*Encabezado-------------------------------------------------------------------*/
@@ -19,6 +19,7 @@
     align-items: center;
     width: 100%;
     padding: 10px;
+    z-index: 100;
 }
 
 #links{
@@ -202,11 +203,14 @@
 /*estilo de prueba*/
 .snow {
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 5px;
+    width: 5px;
     background: white;
     border-radius: 50%;
-    filter: drop-shadow(0 0 10px rgb(255, 90, 90));
+    box-shadow: 0px 0px 10px #ff003c,
+                0px 0px 15px #ff003c,
+                0px 0px 20px #ff003c,
+                0px 0px 25px #ff003c;
 }
 
 /*Habilidades*/
@@ -256,7 +260,7 @@
     box-shadow: 0px 0px 10px #ff6600,
                 0px 0px 15px #ff6600,
                 0px 0px 20px #ff6600,
-                0px 0px 25px #ff6600;;
+                0px 0px 25px #ff6600;
 }
 
 .css {
@@ -266,7 +270,7 @@
     box-shadow: 0px 0px 10px #0084ff,
                 0px 0px 15px #0084ff,
                 0px 0px 20px #0084ff,
-                0px 0px 25px #0084ff;;
+                0px 0px 25px #0084ff;
 }
 
 .mysql {
@@ -276,7 +280,7 @@
     box-shadow: 0px 0px 10px #ff003c,
                 0px 0px 15px #ff003c,
                 0px 0px 20px #ff003c,
-                0px 0px 25px #ff003c;;
+                0px 0px 25px #ff003c;
 }
 
 .js {
@@ -286,7 +290,7 @@
     box-shadow: 0px 0px 10px #00ff2f,
                 0px 0px 15px #00ff2f,
                 0px 0px 20px #00ff2f,
-                0px 0px 25px #00ff2f;;
+                0px 0px 25px #00ff2f;
 }
 
 .python {
@@ -296,7 +300,7 @@
     box-shadow: 0px 0px 10px #0084ff,
                 0px 0px 15px #0084ff,
                 0px 0px 20px #0084ff,
-                0px 0px 25px #0084ff;;
+                0px 0px 25px #0084ff;
 }
 
 .faltante {
@@ -307,3 +311,16 @@
 }
 /*Cuerpo-------------------------------------------------------------------*/
 
+footer {
+    background-color: black;
+    text-align: center;
+    padding: 10px;
+    bottom: 0;
+    width: 100%;
+    font-size: 14px;
+}
+
+.info-contacto {
+    display: flex;
+    justify-content: space-evenly;
+}
